--- a/final/pom.xml
+++ b/final/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.guilford</groupId>
-    <artifactId>studentproject</artifactId>
+    <artifactId>final</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
